# pirobot-servo2040

./: CMakeLists.txt  README.md  build.sh  pico_sdk_import.cmake  pimoroni_pico_import.cmake
firmware/: servo2040-modular.elf  servo2040-modular.uf2
python_tests/: README.md  gpio_test.py  hexapod_servo_control.py  kinematic_positions.txt  led_test.py  microswitch_test.py  power_test.py  servo_test_simple.py  transistor_test.py
src/: CMakeLists.txt  comm_protocol.cpp  comm_protocol.hpp  gpio_manager.cpp  gpio_manager.hpp  led_manager.cpp  led_manager.hpp  main.cpp  pirobot_servo2040.cpp  pirobot_servo2040.hpp  sensor_manager.cpp  sensor_manager.hpp  servo2040_defs.hpp  servo_driver.cpp  servo_driver.hpp  tusb_config.h
